<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Books</string>
    <string name="name_label">Name</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="conf_pass_label">Confirm password</string>
    <string name="reg_button">Register</string>
    <string name="redirect_label">Already registered? Click here.</string>
    <string name="login_redirect_label">Not registered yet? Click here.</string>
    <string name="pref_label">Favorite books</string>
    <string name="search_label">Title, author or ISBN</string>
    <string name="settings_label">Settings</string>
    <string name="title_label">Title</string>
    <string name="author_label">Author</string>
    <string name="description_label">Description</string>
    <string name="number_label">Page count</string>
</resources>