<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:id="@+id/img_cover"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title_label"
                android:layout_toRightOf="@+id/img_cover"
                android:layout_alignParentTop="true"
                android:text="@string/title_label"
                android:textSize="16dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginRight="6dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title_content"
                android:layout_toRightOf="@+id/title_label"
                android:layout_alignParentTop="true"
                android:hint="Titolo"
                android:textSize="14dp"
                android:textAllCaps="true"
                android:paddingTop="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/author_label"
                android:layout_toRightOf="@+id/img_cover"
                android:layout_below="@+id/title_content"
                android:text="@string/author_label"
                android:textSize="16dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginRight="6dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/author_content"
                android:layout_toRightOf="@+id/author_label"
                android:layout_below="@+id/title_content"
                android:hint="Autore"
                android:textSize="14dp"
                android:textAllCaps="true"
                android:paddingTop="2dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/isbn_label"
                android:layout_toRightOf="@+id/img_cover"
                android:layout_below="@+id/author_content"
                android:text="ISBN"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_marginRight="6dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/isbn_content"
                android:hint="isbn"
                android:layout_toRightOf="@+id/isbn_label"
                android:layout_below="@+id/author_content"
                android:paddingTop="2dp"
                android:textSize="14dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/number_label"
                android:layout_toRightOf="@+id/img_cover"
                android:layout_below="@+id/isbn_content"
                android:text="@string/number_label"
                android:textAllCaps="true"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_marginRight="6dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/number_content"
                android:layout_toRightOf="@+id/number_label"
                android:layout_below="@+id/isbn_content"
                android:hint="Numero di pagine"
                android:textSize="14dp"
                android:paddingTop="2dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/description_label"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/img_cover"
                android:text="@string/description_label"
                android:textSize="16dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginRight="6dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/description_content"
                android:layout_toRightOf="@+id/description_label"
                android:layout_below="@+id/img_cover"
                android:hint="Description"
                android:textSize="14dp"
                android:paddingTop="2dp"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>